# wikiguess

./: .gitignore  README.md  docker-compose.yml
.github/: CODEOWNERS
backend/: .env.example  Cargo.toml
backend/migrations/: 20260320_001_init.sql
backend/src/: auth.rs  main.rs  models.rs  routes.rs
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/assets/: CensorIcon.tsx
frontend/src/components/: AppButton.tsx  Footer.tsx  Header.tsx  InputField.tsx  Layout.tsx  LoadingOverlay.tsx
frontend/src/components/GameComponents/: Article.tsx
frontend/src/mocks/: gameMocks.ts
frontend/src/models/: GameModels.ts
frontend/src/pages/: Game.tsx  Login.tsx  NotFound.tsx  Profile.tsx  Register.tsx  Stats.tsx
frontend/src/store/: LoadingContext.tsx
