[package]
name = "wikiguess"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors"] }
jsonwebtoken = "10.3.0"
bcrypt = "0.19.0"
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
